fix: fix style on mobile

--- a/src/components/Register/index.css
+++ b/src/components/Register/index.css
@@ -1,21 +1,16 @@
-.app {
+.form-wrapper {
+    height: 100vh;
+    width: 100vw;
     display: flex;
     align-items: center;
     justify-content: center;
-    height: 100vh;
-    background: linear-gradient(
-        rgba(255, 255, 255, 0.7),
-        rgba(255, 255, 255, 0.3)
-      ),
-      url("https://images.pexels.com/photos/114979/pexels-photo-114979.jpeg?auto=compress&cs=tinysrgb&dpr=2&w=500");
-    background-size: cover;
-    background-position: center;
   }
   
   form{
       background-color: white;
-      padding: 0px 60px;
+      padding: 20px;
       border-radius: 10px;
+      /* box-shadow: 0 0 5px 0 #bdbdbd; */
   }
   
   h1{
